--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerMain"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
+            <android.support.design.widget.FloatingActionButton
                     android:id="@+id/fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -46,7 +46,7 @@
 
     </LinearLayout>
 
-    <com.google.android.material.navigation.NavigationView
+    <android.support.design.widget.NavigationView
             android:id="@+id/navigation"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
-    </com.google.android.material.navigation.NavigationView>
+    </android.support.design.widget.NavigationView>
 
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</android.support.v4.widget.DrawerLayout>
